Fixed text overflow.

--- a/styles/strains.css
+++ b/styles/strains.css
@@ -101,6 +101,7 @@ li a:hover {
   background-color: hsl(317, 100%, 42%);
   border-radius: 7px;
   margin: 30px;
+  overflow: hidden;
 }
 
 .picture {
